k8s/apps/compass/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: compass
spec:
  ipAllowList:
    sourceRange:
    - 192.168.0.0/24
    - 100.64.0.0/10
    - 10.42.0.0/24
